Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-94172

$unionWith explains fail due to incorrect variables.

    • Type: Icon: Bug Bug
    • Resolution: Fixed
    • Priority: Icon: Major - P3 Major - P3
    • 8.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Integration
    • Fully Compatible
    • ALL
    • 200
    • None
    • 3
    • None
    • None
    • None
    • None
    • None
    • None

      The resetting of the variables for $unionWith explain occurs in the wrong place as it happened after parsing and before execution. Parsing sets many of the user variables, which are necessary for execution so the variables should be reset before parsing. 

            Assignee:
            erin.zhu@mongodb.com Erin Zhu
            Reporter:
            erin.zhu@mongodb.com Erin Zhu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: