SERVER-94172 Reset $unionWith variables before parsing (#26613)

GitOrigin-RevId: 83ccde8b3e0b8463b28918a1a7b1972a4434303f